[tool.poetry]
name = "cli-test"
version = "0.1.0"
description = ""
authors = ["Owen <github@owencjones.co.uk>"]
readme = "README.md"
packages = [{include = "cli_test"}]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.0.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
black = "^23.1.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
